--- a/style1.css
+++ b/style1.css
@@ -13,7 +13,7 @@ body {
   background-color: #Dae1eb;
 }
 
-.fixe {
+.hfixe {
   position: fixed;
   width: calc(100% - 2em);
   z-index: 10;
@@ -79,7 +79,7 @@ body {
   right: 150px;
 }
 
-.hhead .para {
+.hhead .hpara {
   text-align: center;
   width: 600px;
   margin: 290px auto;
@@ -111,6 +111,7 @@ body {
   top: -80px;
   font-family: 'Montserrat';
   outline: none;
+  cursor: pointer;
 }
 
 .hhead .hbtn {
@@ -175,7 +176,7 @@ body {
   top: 40px;
 }
 
-.hsec1 .para {
+.hsec1 .hpara {
   text-align: center;
   width: 600px;
   margin: 100px auto 0 auto;
@@ -204,7 +205,7 @@ body {
   color: white;
 }
 
-.hsec2 .para {
+.hsec2 .hpara {
   text-align: center;
   width: 600px;
   margin: 50px auto 0 auto;
@@ -315,6 +316,7 @@ body {
   top: -80px;
   font-family: 'Montserrat';
   outline: none;
+  cursor: pointer;
 }
 
 .hsec3 .hbtn {
@@ -415,6 +417,7 @@ body {
   top: -80px;
   font-family: 'Montserrat';
   outline: none;
+  cursor: pointer;
 }
 
 .hsec4 .hbtn {
@@ -438,7 +441,7 @@ body {
   top: -20px;
 }
 
-.hsec5 .para {
+.hsec5 .hpara {
   text-align: center;
   width: 700px;
   margin: 50px auto 0 auto;
@@ -449,11 +452,11 @@ body {
   bottom: 50px;
 }
 
-.hsec5 .para span {
+.hsec5 .hpara span {
   color: #8f25D6;
 }
 
-.hsec5 .abg {
+.hsec5 .habg {
   width: 100%;
   height: 854px;
   position: absolute;
@@ -461,7 +464,7 @@ body {
   background-color: rgba(119, 73, 193, 0.5);
 }
 
-.hsec5 .slides {
+.hsec5 .hslides {
   width: calc(1518px * 3);
   -webkit-animation: glisse 10s infinite ease-in;
           animation: glisse 10s infinite ease-in;
@@ -470,7 +473,7 @@ body {
   display: flex;
 }
 
-.hsec5 .slider {
+.hsec5 .hslider {
   width: 1518px;
   overflow: hidden;
 }
