--- a/style1.scss
+++ b/style1.scss
@@ -17,6 +17,7 @@
                                          top: -80px;
                                          font-family: 'Montserrat';
                                          outline: none;
+                                         cursor: pointer;
                                      }
                                      .hbtn {
                                          animation: hover 2s infinite;
@@ -51,7 +52,7 @@
                                      background-color: #Dae1eb;
                                  }
                                  
-                                 .fixe {
+                                 .hfixe {
                                      position: fixed;
                                      width: calc(100% - 2em);
                                      z-index: 10;
@@ -102,7 +103,7 @@
                                              right: 150px;
                                          }
                                      }
-                                     .para {
+                                     .hpara {
                                          text-align: center;
                                          width: 600px;
                                          margin: 290px auto;
@@ -150,7 +151,7 @@
                                          position: relative;
                                          top: 40px;
                                      }
-                                     .para {
+                                     .hpara {
                                          text-align: center;
                                          width: 600px;
                                          margin: 100px auto 0 auto;
@@ -177,7 +178,7 @@
                                      span {
                                          color: $btn-color;
                                      }
-                                     .para {
+                                     .hpara {
                                          text-align: center;
                                          width: 600px;
                                          margin: 50px auto 0 auto;
@@ -332,7 +333,7 @@
                                  }
                                  
                                  .hsec5 {
-                                     .para {
+                                     .hpara {
                                          text-align: center;
                                          width: 700px;
                                          margin: 50px auto 0 auto;
@@ -345,19 +346,19 @@
                                              color: $primary-color;
                                          }
                                      }
-                                     .abg {
+                                     .habg {
                                          width: 100%;
                                          height: 854px;
                                          position: absolute;
                                          z-index: 1;
                                          background-color: rgba($color: #7749c1, $alpha: 0.5);
                                      }
-                                     .slides {
+                                     .hslides {
                                          width: calc(1518px * 3);
                                          animation: glisse 10s infinite ease-in;
                                          display: flex;
                                      }
-                                     .slider {
+                                     .hslider {
                                          width: 1518px;
                                          overflow: hidden;
                                      }
