--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -25,6 +25,7 @@ h1 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2/4;
+  border-right: #8f25D6 6px solid;
   padding: 30px;
   border-radius: 8px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -34,6 +35,7 @@ h1 {
 }
 
 .testimonaile .jone img {
+  border: #8f25D6 solid;
   border-radius: 100%;
   width: 50%;
   margin: 20px 25%;
@@ -50,6 +52,7 @@ h1 {
 .testimonaile .jone .social {
   display: none;
   width: 100%;
+  border-bottom: #8f25D6 6px solid;
 }
 
 .testimonaile .jone .social .fab {
@@ -77,6 +80,7 @@ h1 {
   -ms-grid-column: 4;
   -ms-grid-column-span: 2;
   grid-column: 4/6;
+  border-right: #8f25D6 6px solid;
   padding: 30px;
   border-radius: 8px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -86,6 +90,7 @@ h1 {
 }
 
 .testimonaile .steve img {
+  border: #8f25D6 solid;
   border-radius: 100%;
   width: 50%;
   margin: 20px 25%;
@@ -102,6 +107,7 @@ h1 {
 .testimonaile .steve .social {
   display: none;
   width: 100%;
+  border-bottom: #8f25D6 6px solid;
 }
 
 .testimonaile .steve .social .fab {
@@ -129,6 +135,7 @@ h1 {
   -ms-grid-column: 6;
   -ms-grid-column-span: 2;
   grid-column: 6/8;
+  border-right: #8f25D6 6px solid;
   padding: 30px;
   border-radius: 8px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -138,6 +145,7 @@ h1 {
 }
 
 .testimonaile .ball img {
+  border: #8f25D6 solid;
   border-radius: 100%;
   width: 50%;
   margin: 20px 25%;
@@ -154,6 +162,7 @@ h1 {
 .testimonaile .ball .social {
   display: none;
   width: 100%;
+  border-bottom: #8f25D6 6px solid;
 }
 
 .testimonaile .ball .social .fab {
@@ -175,5 +184,326 @@ h1 {
 
 .testimonaile .ball:hover .social {
   display: contents;
+}
+
+.section2 {
+  margin: 60px auto;
+}
+
+.section2 .pricing {
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 40px;
+}
+
+.section2 .pricing .standard {
+  border-right: #8f25D6 6px solid;
+  padding: 30px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  background-color: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[4];
+      grid-template-rows: repeat(4, auto);
+  border: none;
+}
+
+.section2 .pricing .standard img {
+  border: #8f25D6 solid;
+  border-radius: 100%;
+  width: 50%;
+  margin: 20px 25%;
+}
+
+.section2 .pricing .standard .stars {
+  color: #8f25D6;
+}
+
+.section2 .pricing .standard .personne h3 {
+  color: #8f25D6;
+}
+
+.section2 .pricing .standard .social {
+  display: none;
+  width: 100%;
+  border-bottom: #8f25D6 6px solid;
+}
+
+.section2 .pricing .standard .social .fab {
+  font-size: 400%;
+  padding: 10% 3%;
+}
+
+.section2 .pricing .standard .social .fa-facebook-square:hover {
+  color: #1877F2;
+}
+
+.section2 .pricing .standard .social .fa-whatsapp-square:hover {
+  color: #25D366;
+}
+
+.section2 .pricing .standard .social .fa-twitter-square:hover {
+  color: #1DA1F2;
+}
+
+.section2 .pricing .standard:hover .social {
+  display: contents;
+}
+
+.section2 .pricing .standard h2 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+.section2 .pricing .standard button {
+  height: 50px;
+  width: 80%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(left, #8f25D6, #569cf7);
+  border: none;
+  border-radius: 4px;
+  color: white;
+}
+
+.section2 .pricing .standard .prix {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(#8f25D6, #569cf7);
+}
+
+.section2 .pricing .standard .prix h3 {
+  margin: 80px auto;
+  width: 50%;
+  color: white;
+}
+
+.section2 .pricing .standard .container {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+.section2 .pricing .standard:hover {
+  width: 90%;
+}
+
+.section2 .pricing .professionnel {
+  border-right: #8f25D6 6px solid;
+  padding: 30px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  background-color: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[4];
+      grid-template-rows: repeat(4, auto);
+  border: none;
+}
+
+.section2 .pricing .professionnel img {
+  border: #8f25D6 solid;
+  border-radius: 100%;
+  width: 50%;
+  margin: 20px 25%;
+}
+
+.section2 .pricing .professionnel .stars {
+  color: #8f25D6;
+}
+
+.section2 .pricing .professionnel .personne h3 {
+  color: #8f25D6;
+}
+
+.section2 .pricing .professionnel .social {
+  display: none;
+  width: 100%;
+  border-bottom: #8f25D6 6px solid;
+}
+
+.section2 .pricing .professionnel .social .fab {
+  font-size: 400%;
+  padding: 10% 3%;
+}
+
+.section2 .pricing .professionnel .social .fa-facebook-square:hover {
+  color: #1877F2;
+}
+
+.section2 .pricing .professionnel .social .fa-whatsapp-square:hover {
+  color: #25D366;
+}
+
+.section2 .pricing .professionnel .social .fa-twitter-square:hover {
+  color: #1DA1F2;
+}
+
+.section2 .pricing .professionnel:hover .social {
+  display: contents;
+}
+
+.section2 .pricing .professionnel h2 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+.section2 .pricing .professionnel button {
+  height: 50px;
+  width: 80%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(left, #8f25D6, #569cf7);
+  border: none;
+  border-radius: 4px;
+  color: white;
+}
+
+.section2 .pricing .professionnel .prix {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(#8f25D6, #569cf7);
+}
+
+.section2 .pricing .professionnel .prix h3 {
+  margin: 80px auto;
+  width: 50%;
+  color: white;
+}
+
+.section2 .pricing .professionnel .container {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+.section2 .pricing .professionnel:hover {
+  width: 90%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(#8f25D6, #569cf7);
+  color: white;
+}
+
+.section2 .demande {
+  border-right: #8f25D6 6px solid;
+  padding: 30px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  background-color: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[4];
+      grid-template-rows: repeat(4, auto);
+  border: none;
+}
+
+.section2 .demande img {
+  border: #8f25D6 solid;
+  border-radius: 100%;
+  width: 50%;
+  margin: 20px 25%;
+}
+
+.section2 .demande .stars {
+  color: #8f25D6;
+}
+
+.section2 .demande .personne h3 {
+  color: #8f25D6;
+}
+
+.section2 .demande .social {
+  display: none;
+  width: 100%;
+  border-bottom: #8f25D6 6px solid;
+}
+
+.section2 .demande .social .fab {
+  font-size: 400%;
+  padding: 10% 3%;
+}
+
+.section2 .demande .social .fa-facebook-square:hover {
+  color: #1877F2;
+}
+
+.section2 .demande .social .fa-whatsapp-square:hover {
+  color: #25D366;
+}
+
+.section2 .demande .social .fa-twitter-square:hover {
+  color: #1DA1F2;
+}
+
+.section2 .demande:hover .social {
+  display: contents;
+}
+
+.section2 .demande h2 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+.section2 .demande button {
+  height: 50px;
+  width: 80%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(left, #8f25D6, #569cf7);
+  border: none;
+  border-radius: 4px;
+  color: white;
+}
+
+.section2 .demande .prix {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(#8f25D6, #569cf7);
+}
+
+.section2 .demande .prix h3 {
+  margin: 80px auto;
+  width: 50%;
+  color: white;
+}
+
+.section2 .demande .container {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+.section2 .demande:hover {
+  width: 90%;
 }
 /*# sourceMappingURL=styles.css.map */
