--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -9,12 +9,14 @@ body {
 }
 
 @mixin tous {
+    border-right: $principe 6px solid;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     background-color: white;
     img {
+        border: $principe solid;
         border-radius: 100%;
         width: 50%;
         margin: 20px 25%;
@@ -30,6 +32,7 @@ body {
     .social {
         display: none;
         width: 100%;
+        border-bottom: $principe 6px solid;
         .fab {
             font-size: 400%;
             padding: 10% 3%;
@@ -72,5 +75,74 @@ h1 {
     .ball {
         grid-column: 6/8;
         @include tous
+    }
+}
+
+// :::kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk
+@mixin pricing {
+    @include tous;
+    display: grid;
+    grid-template-rows: repeat(4, auto);
+    h2 {
+        grid-row: 1/2;
+    }
+    button {
+        height: 50px;
+        width: 80%;
+        background-image: linear-gradient(left, $principe, rgb(86, 156, 247));
+        border: none;
+        border-radius: 4px;
+        color: white;
+    }
+    .prix {
+        grid-row: 2/4;
+        border-radius: 50%;
+        width: 200px;
+        height: 200px;
+        margin: auto;
+        background-image: linear-gradient($principe, rgb(86, 156, 247));
+        h3 {
+            margin: 80px auto;
+            width: 50%;
+            color: white;
+        }
+    }
+    .container {
+        grid-row: 4/5;
+    }
+}
+
+.section2 {
+    margin: 60px auto;
+    .pricing {
+        text-align: center;
+        width: 80%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 40px;
+        .standard {
+            @include pricing;
+            border: none;
+            &:hover {
+                width: 90%;
+            }
+        }
+        .professionnel {
+            @include pricing;
+            border: none;
+            &:hover {
+                width: 90%;
+                background-image: linear-gradient($principe, rgb(86, 156, 247));
+                color: white;
+            }
+        }
+    }
+    .demande {
+        @include pricing;
+        border: none;
+        &:hover {
+            width: 90%;
+        }
     }
 }
