--- a/team and client/_footer.scss
+++ b/team and client/_footer.scss
@@ -161,11 +161,12 @@ footer {
 
     .copy {
         h6 {
-            display: block;
+            width: 300px;
             color: #ffffff80;
             font-weight: 100;
-            margin: 0;
-            cursor: pointer;
+            margin: 0 auto;
+
+
             padding: 0;
 
 
