--- a/team and client/style.css
+++ b/team and client/style.css
@@ -534,11 +534,10 @@ footer .footer-icon .icon-link:hover .fa-linkedin-in {
 }
 
 footer .copy h6 {
-  display: block;
+  width: 300px;
   color: #ffffff80;
   font-weight: 100;
-  margin: 0;
-  cursor: pointer;
+  margin: 0 auto;
   padding: 0;
 }
 /*# sourceMappingURL=style.css.map */
