--- a/style1.scss
+++ b/style1.scss
@@ -478,7 +478,7 @@
                              }
                          }
                          
-                         @import "./footer";
+                         @import "./team and client/client" @import "./footer";
                          footer {
                              margin-top: -5px;
                              h4 {
