--- a/_HEADER.scss
+++ b/_HEADER.scss
@@ -1,3 +1,9 @@
+// VARIABLES //
+$primary-color: #8f25D6;
+$btn-bg-color: black;
+$btn-color: white;
+$tablet:800px;
+$mobile:375px;
 .header {
     position: fixed;
     margin-top: -20px;
