--- a/service/style.scss
+++ b/service/style.scss
@@ -59,6 +59,7 @@ hr {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 10px;
+    margin-left: 40px;
 }
 
 
@@ -98,7 +99,7 @@ hr {
     width: 30%;
 }
 
-i {
+ .Ssection1 i {
     font-size: 700%;
 }
 
@@ -126,9 +127,9 @@ i {
 
 
 /*tablet*/
-@media (max-width:800px) {
+@media (max-width:781px) {
     body {
-        width: 800px;
+        width: 781px;
         margin: 0;
         padding: 0;
     }
@@ -136,7 +137,8 @@ i {
     .Ssection1 {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 5px;
+        
+        
     }
 
     .svideo {
@@ -161,7 +163,7 @@ i {
         font-size: 90%;
     }
 
-    i {
+    .Ssection1 i {
         font-size: 300%;
     }
 
@@ -216,9 +218,6 @@ i {
 
     }
 
-    .ssection3 {
-        margin-bottom: 90%;
-    }
 }
 
 @mixin shad {
@@ -230,7 +229,7 @@ i {
     padding: 10%;
     border-left: 10px $color1 solid;
 
-    @media (max-width:800px) {
+    @media (max-width:781px) {
         margin: 0;
         margin-bottom: 20%;
         margin-left: 10px;
@@ -281,11 +280,13 @@ i {
     }
     .svideo{
         width: 450px;
-        margin-left: -70px;
+        margin-left: -5px;
+
     }
     .Spara{
         font-size: 100%;
         max-width: 70%;
+        margin-left: 90px;
     }
     .Ssection1{
         display: grid;
@@ -303,25 +304,22 @@ i {
         height: 40px;
         margin-top: 20%;
     }
-    .ssection3{
-        margin-bottom: 10%;
-
-    }
+    
     .StitreD{
         margin: 10%;
         position: relative;
-        right:120px;
+        right:20px;
     }
     .StitreF{
         margin-right: 30%;
         position: relative;
         bottom: 60px;
+        margin-left: 150px;
     }
     .btb{
         position: relative;
         bottom: 50px;
-        position: relative;
-        right: 15%;
+        margin-right:40px;
         font-size: 130%;
         height: 80px;
         width: 300px;
@@ -335,12 +333,13 @@ i {
     .ser{
         font-size: 130%;
         position: relative;
-        right:30px;
+        right:1px;
+        bottom: 10px;
     }
     i.fab {
         font-size: 40px;
-        position: relative;
-        right: 100px;
+        margin-left: 10px;
     }
 }
+@import"./footer"
 
