--- a/_navbar.scss
+++ b/_navbar.scss
@@ -4,6 +4,7 @@ $btn-bg-color: black;
 $btn-color: white;
 $tablet:800px;
 $mobile:375px;
+
 //MIXIN //
 @mixin tablet {
     @media (max-width: #{$tablet}) {
@@ -29,13 +30,16 @@ $mobile:375px;
     z-index: 20;
     width: 100vw;
     margin-left: -50px;
+
     ul {
         margin: 12px 3px 14px 218px;
     }
+
     @include mobile() {}
+
     @include tablet() {
         width: 100vw;
-        margin-left: -49px;
+        margin-left: -35px;
         left: 28px;
     }
 }
@@ -49,11 +53,14 @@ $mobile:375px;
     color: $btn-color;
     cursor: pointer;
     margin: 11px 0px 12px 44px;
+
+
     @include tablet() {
         margin: 0px;
         margin-left: 10px;
         margin: 8px 8px 16px 14px;
     }
+
     @include mobile() {
         font-size: 30px;
     }
@@ -63,6 +70,7 @@ $mobile:375px;
     float: right;
     line-height: 100px;
     margin-left: 240px;
+
     @include tablet() {
         margin-right: 0px;
     }
@@ -73,14 +81,17 @@ $mobile:375px;
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bold;
-    padding: 0 40px;
+    padding: 0px 40px;
     transition: 0.4s;
+
+
+
     &:hover {
         background-color: $btn-color;
         border-radius: 30px;
-        padding: 10px;
-        padding-right: 20px;
-        font-style: unset;
+        padding: 10px 40px;
+
+
         color: $primary-color;
         transition: .5s;
     }
@@ -109,32 +120,43 @@ $mobile:375px;
 }
 
 @include tablet() {
+
     .show-menu-btn,
     .hide-menu-btn {
         display: block;
     }
+
     .menu {
         position: relative;
         width: 100%;
         height: 100vh;
         background: $primary-color;
-        right: 100%;
+        right: -100%;
         bottom: 50px;
+
         text-align: center;
         padding: 80px 0;
         line-height: normal;
         transition: 0.7s;
         z-index: 10;
+
+
     }
+
     .menu a {
         display: block;
-        padding: 20px;
+        margin: 20px;
+        padding: 10px;
+
+        &:hover {}
     }
+
     .hide-menu-btn {
         position: absolute;
         top: 40px;
         right: 40px;
     }
+
     #chk:checked~.menu {
         right: 0;
     }
