--- a/style1.css
+++ b/style1.css
@@ -60,7 +60,7 @@ body {
 @media (max-width: 800px) {
   .hhead .hilmi-header {
     width: 100vw;
-    margin-left: -49px;
+    margin-left: -35px;
     left: 28px;
   }
 }
@@ -107,7 +107,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  padding: 0 40px;
+  padding: 0px 40px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -115,9 +115,7 @@ body {
 .hhead .menu a:hover {
   background-color: white;
   border-radius: 30px;
-  padding: 10px;
-  padding-right: 20px;
-  font-style: unset;
+  padding: 10px 40px;
   color: #8f25D6;
   -webkit-transition: .5s;
   transition: .5s;
@@ -156,7 +154,7 @@ body {
     width: 100%;
     height: 100vh;
     background: #8f25D6;
-    right: 100%;
+    right: -100%;
     bottom: 50px;
     text-align: center;
     padding: 80px 0;
@@ -167,7 +165,8 @@ body {
   }
   .hhead .menu a {
     display: block;
-    padding: 20px;
+    margin: 20px;
+    padding: 10px;
   }
   .hhead .hide-menu-btn {
     position: absolute;
@@ -818,7 +817,7 @@ body {
   .hsec4 .hbtn {
     position: relative;
     top: 30px;
-    left: -555px;
+    left: -560px;
   }
 }
 
